# agent-block

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
blocks/: agent  session
blocks/agent/: init.lua
blocks/coding_agent/: init.lua
blocks/compile_loop/: README.md  init.lua
blocks/lshape/: check.lua  init.lua  luacats.lua  reflect.lua  t.lua
blocks/session/: init.lua
blocks/wake_compile/: README.md  init.lua
crates/agent-block/: Cargo.toml
crates/agent-block-core/: Cargo.toml
crates/agent-block-core/blocks/agent/: init.lua
crates/agent-block-core/src/: host.rs  lib.rs
crates/agent-block-core/src/bridge/: bus.rs  http.rs  kv_tools.lua  llm.rs  log.rs  mcp.rs  mesh.rs  mod.rs  sql.rs  sql_tools.lua  tool.rs
crates/agent-block-core/src/bridge/task/: mod.rs
crates/agent-block-core/src/bus/: dispatcher.rs  event.rs  source.rs
crates/agent-block-core/tests/: auto_serve_bus.rs  default_agent.rs  extra_globals.rs  host_tools.rs  mcp_cwd.rs  shutdown_token.rs
crates/agent-block-mcp/: Cargo.toml
crates/agent-block-mcp/src/: handler.rs  http.rs  lib.rs  lua_json.rs
crates/agent-block-types/: Cargo.toml
crates/agent-block-types/src/: error.rs  lib.rs  obs.rs
crates/agent-block/examples/: README.md  agent_with_kv.lua  agent_with_sql.lua  echo_mcp_server.rs  mcp_resource_subscribe.lua  test_agent_log_meta.lua  test_algocline.lua  test_algocline_e2e.lua  test_algocline_pause.lua  test_anthropic_compile_loop_multi_lazy_load.lua  test_anthropic_compile_loop_multi_selective.lua  test_anthropic_compile_loop_multi_stagnation.lua  test_anthropic_compile_loop_pytest.lua  test_bus.lua  test_compile_loop_parent.lua  test_fcloop.lua  test_mcp_complete.lua  test_mcp_elicitation.lua  test_mcp_ping.lua  test_mcp_roots.lua  test_openai_compile_loop_multi_lazy_load.lua  test_qwen_compile_loop.lua  test_qwen_compile_loop_hard.lua  test_qwen_compile_loop_lust.lua  test_qwen_compile_loop_rust.lua  test_qwen_openai.lua  test_ts.lua
crates/agent-block/examples/bus-handler-fast/: handler.lua
crates/agent-block/examples/bus-handler-grace/: README.md  handler.lua
crates/agent-block/src/: main.rs
crates/agent-block/tests/: e2e_agent.rs  e2e_build_tools_extra.rs  e2e_compile_loop.rs  e2e_kv.rs  e2e_lshape.rs  e2e_mcp.rs  e2e_mcp_resource_subscribe.rs  e2e_mcp_rich.rs  e2e_obs.rs  e2e_prompt.rs  e2e_register_tools.rs  e2e_sh.rs  e2e_sql.rs  poc_main_isle_exec.rs
crates/agent-block/tests/common/: compile_loop_anthropic_mock.rs  compile_loop_diff_anthropic_mock.rs  compile_loop_diff_multi_anthropic_mock.rs  mod.rs
crates/agent-block/tests/fixtures/: agent_require.lua  build_tools_dedup.lua  build_tools_extra.lua  compile_loop_cache_lifecycle.lua  compile_loop_diff_anthropic_mock.lua  compile_loop_diff_multi_anthropic_mock.lua  compile_loop_distill.lua  compile_loop_state_test.lua  dispatch_extra_tools.lua  error_runtime.lua  error_syntax.lua  http_get.lua  lshape_require.lua  mcp_errors.lua  mcp_log_capability_skip.lua  mcp_on_resource_update_callback.lua  obs_trace_e2e.lua  prompt_flag.lua  resolve_mcp_group.lua  session_roundtrip.lua  sh_exec.lua  sql_null.lua  sql_roundtrip.lua  task_phase3.lua  task_phase4.lua  task_phase5.lua  tool_register.lua  tool_schema.lua  ts_memory.lua  ts_roundtrip.lua
docs/architecture/: agent-state-primitives.md  mcp-support.md  trace-context.md
docs/runbooks/: e2e-bus-handler.md  e2e-mcp-resource-subscribe.md  trace-rollout-checklist.md
examples/: agent_with_kv.lua  agent_with_kv_v2.lua  agent_with_sql.lua  agentify_flow.lua  echo_mcp_server.rs  hello.lua  hello_stream.lua  session_chat.lua  test_agent.lua  test_agent_log_meta.lua  test_algocline.lua  test_algocline_agent.lua  test_algocline_e2e.lua  test_algocline_pause.lua  test_anthropic_coding_react.lua  test_anthropic_compile_loop.lua  test_anthropic_compile_loop_multi.lua  test_anthropic_compile_loop_multi_delete.lua  test_anthropic_compile_loop_multi_lazy_load.lua  test_anthropic_compile_loop_multi_selective.lua  test_anthropic_compile_loop_multi_stagnation.lua  test_anthropic_compile_loop_pytest.lua  test_compile_loop_parent.lua  test_mcp.lua  test_mcp_resource_templates.lua  test_openai_compile_loop_multi_lazy_load.lua  test_prompt_cache.lua  test_provider_switch.lua  test_qwen_coding_react.lua  test_qwen_coding_react_hard.lua  test_qwen_coding_react_lust.lua  test_qwen_coding_react_rust.lua  test_qwen_compile_loop.lua  test_qwen_compile_loop_hard.lua  test_qwen_compile_loop_lust.lua  test_qwen_compile_loop_rust.lua  test_qwen_openai.lua  test_ts.lua  verify_echo_harness.lua
examples/bus-handler-fast/: verify.sh
examples/bus-handler-grace/: handler.lua  verify.sh
scripts/: fcloop.lua  test_fcloop.lua
src/: error.rs  host.rs  main.rs  mcp_client.rs
src/bridge/: bus.rs  config.rs  http.rs  kv.rs  kv_tools.lua  mcp.rs  mesh.rs  mod.rs  obs.rs  sh.rs  sql.rs  sql_tools.lua  task.rs  tool.rs  ts.rs  ts_tools.lua
src/bus/: dispatcher.rs  event.rs  mod.rs  source.rs
src/mcp_client/: handler.rs  http.rs  mod.rs
tests/: e2e_agent.rs  e2e_basic.rs  e2e_build_tools_extra.rs  e2e_bus.rs  e2e_compile_loop.rs  e2e_http.rs  e2e_mcp.rs  e2e_mcp_rich.rs  e2e_obs.rs  e2e_prompt.rs  e2e_register_tools.rs  e2e_session.rs  e2e_sql.rs  e2e_task.rs  e2e_tool.rs  e2e_ts.rs  poc_main_isle_exec.rs
tests/common/: compile_loop_diff_multi_anthropic_mock.rs  compile_loop_distill_mock.rs  compile_loop_openai_mock.rs  compile_loop_openai_mock_three_turn.rs  mod.rs  openai_mock.rs
tests/fixtures/: agent_openai_mock.lua  build_tools_dedup.lua  build_tools_extra.lua  build_tools_mcp_group.lua  compile_loop_anthropic_mock.lua  compile_loop_diff_multi_anthropic_mock_two_iter.lua  compile_loop_distill_mock.lua  compile_loop_distill_range_mock.lua  compile_loop_openai_mock.lua  compile_loop_openai_mock_three_turn.lua  compile_loop_state_test.lua  dispatch_extra_tools.lua  hello.lua  kv_roundtrip.lua  mcp_http_cancel.lua  mcp_http_tools.lua  mcp_on_log_callback.lua  mcp_on_log_nil_fields.lua  mcp_on_progress_envelope.lua  mcp_on_progress_nil_fields.lua  obs_trace_e2e.lua  (+4 more)
(+5 files in other folders)
