[package]
name = "agent-block"
version = "0.1.0"
edition = "2021"
description = "Lua-first Agent Runtime built on AgentMesh"
authors = ["Yutaka Nishimura"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ynishi/agent-block"
keywords = ["lua", "agent", "runtime", "mcp", "mesh"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

include = [
    "Cargo.toml",
    "Cargo.lock",
    "src/**/*.rs",
    "LICENSE-*",
    "README.md",
    "CHANGELOG.md",
    "examples/**/*.lua",
]

[[bin]]
name = "agent-block"
path = "src/main.rs"

[dependencies]
mlua-isle = { version = "0.4", features = ["pool", "tokio"] }
mlua = { version = "0.11", features = ["lua54", "vendored", "async", "serialize"] }

agent-mesh-core = "0.3"
agent-mesh-sdk = "0.3"

mlua-batteries = { version = "0.2", features = ["json", "fs", "env", "path", "time"] }
llm-extract = "0.1"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
