[package]
name = "agent-block"
version = "0.5.1"
edition = "2021"
description = "Lua-first Agent Runtime built on AgentMesh"
authors = ["Yutaka Nishimura"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ynishi/agent-block"
keywords = ["lua", "agent", "runtime", "mcp", "mesh"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

include = [
    "Cargo.toml",
    "Cargo.lock",
    "src/**/*.rs",
    "src/**/*.lua",
    "LICENSE-*",
    "README.md",
    "CHANGELOG.md",
    "examples/**/*.lua",
    "blocks/**/*.lua",
]

[[bin]]
name = "agent-block"
path = "src/main.rs"

[dependencies]
mlua-isle = { version = "0.4.1", features = ["pool", "tokio"] }
mlua = { version = "0.11", features = ["lua54", "vendored", "async", "serialize"] }

agent-mesh-core = "0.3"
agent-mesh-sdk = "0.3"

mlua-batteries = { version = "0.3", features = ["json", "fs", "env", "path", "time", "task", "sql", "kv"] }
llm-extract = "0.1"

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
rmcp = { version = "1.4.0", features = ["client", "transport-child-process"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
# Enable rmcp `server` (and transitively `transport-async-rw`) for in-process
# concurrency tests that run an MCP server over tokio::io::duplex pipes.
rmcp = { version = "1.4.0", features = ["server"] }
# `test-util` enables `tokio::time::pause`/`advance`/`resume` and the
# `start_paused` flavor used by concurrency tests in `src/bus/dispatcher.rs`.
tokio = { version = "1", features = ["full", "test-util"] }
# SIGTERM / SIGINT delivery for EventBus e2e tests (tests/e2e_bus.rs).
# `signal` for `kill(2)` + Signal enum, `process` for `Pid::from_raw`.
[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
