[workspace]
members = [
    "crates/agent-block-types",
    "crates/agent-block-mcp",
    "crates/agent-block-core",
    "crates/agent-block",
]
resolver = "2"

[workspace.package]
version = "0.24.0"
edition = "2021"
authors = ["Yutaka Nishimura"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ynishi/agent-block"

[workspace.dependencies]
agent-block-types = { path = "crates/agent-block-types", version = "0.24.0" }
agent-block-mcp   = { path = "crates/agent-block-mcp",   version = "0.24.0" }
agent-block-core  = { path = "crates/agent-block-core",  version = "0.24.0" }

thiserror    = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tokio        = { version = "1", features = ["full"] }
tokio-util   = { version = "0.7", features = ["rt"] }
reqwest      = { version = "0.12", features = ["json"] }
uuid         = { version = "1", features = ["v4"] }
tracing      = "0.1"
async-trait  = "0.1"
rmcp         = { version = "1.4.0", features = ["client", "transport-child-process", "client-side-sse", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
mlua-isle    = { version = "0.4.1", features = ["pool", "tokio"] }
mlua         = { version = "0.11", features = ["lua54", "vendored", "async", "serialize"] }
mlua-batteries = { version = "0.3", features = ["json", "fs", "env", "path", "time", "task", "sql", "kv"] }
rusqlite     = { version = "0.31", features = ["bundled"] }
anyhow       = "1"
dotenvy      = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap         = { version = "4", features = ["derive", "env"] }
rustls       = { version = "0.23", default-features = false, features = ["ring"] }
agent-mesh-core = "0.3"
agent-mesh-sdk  = "0.3"
llm-extract     = "0.1"
