[package]
name = "agent-block-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared error types and observability utilities for agent-block"

[dependencies]
thiserror.workspace = true
serde_json.workspace = true
reqwest.workspace = true
uuid.workspace = true
