[package]
name = "agent-block"
version.workspace = true
edition.workspace = true
description = "Lua-first Agent Runtime built on AgentMesh"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["lua", "agent", "runtime", "mcp", "mesh"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

[[bin]]
name = "agent-block"
path = "src/main.rs"

[[example]]
name = "subscribe_test_server"
path = "examples/bin/subscribe_test_server.rs"

[dependencies]
agent-block-core.workspace = true
agent-block-mcp.workspace = true

anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rustls.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
# Enable rmcp `server` (and transitively `transport-async-rw`) for in-process
# concurrency tests that run an MCP server over tokio::io::duplex pipes.
# `transport-streamable-http-server` enables the axum-backed in-process HTTP
# server used by `tests/e2e_mcp_rich.rs`.
rmcp = { version = "1.4.0", features = ["server", "transport-streamable-http-server", "elicitation"] }
# `test-util` enables `tokio::time::pause`/`advance`/`resume`.
tokio = { version = "1", features = ["full", "test-util"] }
# axum is needed by `tests/e2e_mcp_rich.rs` to serve the in-process
# StreamableHttpService on an ephemeral port.
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
tokio-util = { version = "0.7" }
serde_json = "1"

# Re-export internal crates for tests/examples that wire pieces directly.
agent-block-types.workspace = true
mlua.workspace = true
mlua-isle.workspace = true

# SIGTERM / SIGINT delivery for EventBus e2e tests (tests/e2e_bus.rs).
[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
